<resources>
    <string name="app_name">AndroidRecyclerView</string>
    <string name="rv_item_text">itemText</string>
    <string name="action_favorite">favorite</string>
    <string name="action_activity_element">activity_element</string>
    <string name="exec_app">关闭（启用）其他应用</string>
    <string name="open_new_fragment">启用新的Fragment</string>
    <string name="action_settings">setting</string>
    <string name="settings">设置</string>
    <string name="action_search">Search</string>
    <string name="title">主标题</string>
    <string name="subTitle">副标题</string>
    <string name="refresh">下拉刷新</string>
    <string name="clearCache">clearCache</string>
    <string name="tv_convert">设备信息打印log</string>
    <string name="vibrator">vibrator</string>
    <string name="speechRecognizer">SpeechRecognizer</string>
    <string name="edit_text_string">EditText 复制 剪切 粘贴事件</string>
    <string name="edit_text_keyboard">EditText 软键盘相关</string>
    <string name="ObjectAnimator">ObjectAnimator</string>
    <string name="inputEditText">输入框</string>
    <string name="view">View事件</string>
    <string name="android_art">O(∩_∩)O哈哈~欢迎来到AndroidArt世界</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--分享-->
    <string name="share_system_title">系统分享示例</string>
    <string name="share_text">文本分享</string>
    <string name="share_image">图片分享</string>
    <string name="share_multi_image">多图分享</string>
    <string name="share_to_special_app">分享时显示指定app</string>
</resources>
