<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_clearCache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ll_selector"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_10dp"
        android:paddingBottom="@dimen/margin_10dp">

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/clearCache" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_31c27c"></TextView>

    <LinearLayout
        android:id="@+id/ll_convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ll_selector"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/margin_10dp"
        android:paddingBottom="@dimen/margin_10dp">

        <TextView
            android:id="@+id/tv_convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_convert" />
    </LinearLayout>

    <TextView
        android:layout_width="355dp"
        android:layout_height="1dp"
        android:background="@color/color_31c27c" />

    <!--震动-->
    <Button
        android:id="@+id/vibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/ll_selector"
        android:text="@string/vibrator" />

    <!--语音识别-->
    <Button
        android:id="@+id/speechRecognizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/ll_selector"
        android:text="@string/speechRecognizer" />
    <!--EditText 复制 剪切 粘贴-->
    <com.hongri.recyclerview.widget.MyEditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/ll_selector"
        android:hint="@string/edit_text_string" />

    <Button
        android:id="@+id/btn_exec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ll_selector"
        android:layout_margin="2dp"
        android:text="@string/exec_app"/>
</LinearLayout>